--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,12 @@ DerivedData/
 *.dSYM.zip
 *.dSYM
 
+## Others
+
+.DS_Store
+*/.DS_Store
+*/*/.DS_Store
+
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
